2014-11-07  Antonio Cao (@burzumishi)

	* xenesis: 0.1 Initial Release.


2014-11-08  Antonio Cao (@burzumishi)

	* xenesis: GNU AutoTools Support.
	* xenesis: Terminal Color Support.
	* xenesis: Dinamic Configuration Files Support (conf.d).
	* xenesis: Remote Admin Layer (RAL) Plugin Support.
	* libxenesis.so: errorcheck(), check_directory_structure(), echolog(), startmsg(), usage().
	* libxenesis-ral.so: ral(), load_ral_plugin(), check_ral_plugin(), load_hosts(), check_host_list().


2014-11-09  Antonio Cao (@burzumishi)

	* libxenesis-ral.so: Dinamic Host List scripts: default, demo.
	* xenesis: Enable Debug Log.
	* libxenesis.so: echodebuglog().


2014-11-10  Antonio Cao (@burzumishi)

	* libxenesis-ral.so: start_ral(), ral(), remove load_hosts(), remove check_host_list();.
	* libxenesis.so: check_user(), setup_os_commands() & [linux.conf, hpux.conf, cygwin.conf, default_os.conf].
	* xenesis: add "touch $LOG", add "libxenesis-net.so".
	* xenesis: Xenesis.1 man page.
	* xenesis: Force POSIX "C"" (Disable Internacionalization Support).
	* libxenesis-net.so: check_ping(), load_host_list(), addto_host_list(), check_host_list();
	* libxenesis-ssh.so: check_ssh().
	* libxenesis-sshnopass.so: Perl script to avoid ask password in SSH, used from "libxenesis-ssh.so".
	* User output improvements.


2014-11-11  Antonio Cao (@burzumishi)

	* libxenesis-ral.so: ral_plugin_notfound().
	* xenesis: "sshconf".
	* libxenesis-ssh.so: check_rsa(), configure_ssh().
	* libxenesis.so: continue_promt().
	* More User output improvements.


2014-11-12  Antonio Cao (@burzumishi)

	* libxenesis-net.so: check_dns() with "$HOSTCMD=host".
	* xenesis: FreeBSD Support.

