@@ -1,0 +1,4 @@
+SUBDIRS = conf.d os
+
+all-local:
+	@echo "=== all-local done ===";
